--- a/EmberTripsPage/Components/Trips/Overview.razor
+++ b/EmberTripsPage/Components/Trips/Overview.razor
@@ -1,5 +1,26 @@
-﻿<h3>Overview</h3>
+﻿@using BootstrapBlazor.Components
+
+@using EmberTripsPage.Models.Json
+
+@if (Trip != null)
+{
+    <div class="overview-component">
+        <div class="route-overview">
+            <div class="route-start">
+                <div class="route-from">@Trip.GetScheduledStart() from</div>
+                <div class="route-region">@Trip.GetOriginRegion()</div>
+                <div class="route-name">@Trip.GetOriginName()</div>
+            </div>
+            <div class="route-end">
+                <div class="route-to">@Trip.GetScheduledEnd() to</div>
+                <div class="route-region">@Trip.GetDestinationRegion()</div>
+                <div class="route-name">@Trip.GetDestinationName()</div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
-
+    [Parameter]
+    public TripResult? Trip { get; set; }
 }
