show +days for next-day arrivals

--- a/EmberTripsPage/Components/Trips/Overview.razor
+++ b/EmberTripsPage/Components/Trips/Overview.razor
@@ -7,12 +7,12 @@
     <div class="overview-component">
         <div class="route-overview">
             <div class="route-start">
-                <div class="route-from">@Trip.GetScheduledStart() from</div>
+                <div class="route-from">@Trip.GetFormattedStart() from</div>
                 <div class="route-region">@Trip.GetOriginRegion()</div>
                 <div class="route-name">@Trip.GetOriginName()</div>
             </div>
             <div class="route-end">
-                <div class="route-to">@Trip.GetScheduledEnd() to</div>
+                <div class="route-to">@Trip.GetFormattedEnd() to</div>
                 <div class="route-region">@Trip.GetDestinationRegion()</div>
                 <div class="route-name">@Trip.GetDestinationName()</div>
             </div>
