--- a/EmberTripsPage/wwwroot/app.css
+++ b/EmberTripsPage/wwwroot/app.css
@@ -1,6 +1,10 @@
 :root {
     --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --page-background-color: lightgray;
+    /* Margins */
+    --component-margin-top: 2rem;
+    --component-margin-sides: 2rem;
+
     /* Marker Sizes */
     --marker-icon-size-small: 14px;
     --marker-icon-size-large: 20px;
@@ -38,20 +42,23 @@ html, body {
 }
 
 .trips-component {
+    width: 100%;
     display: block;
 }
 
 /* Overview component */
 .overview-component {
-    margin-left: 2rem;
-    margin-top: 2rem;
+    margin-left: var(--component-margin-sides);
+    margin-top: var(--component-margin-top);
+    width: 100%;
+    max-width: 500px;
     padding: 0.2rem;
     border-radius: 0.15rem;
     background-color: white;
 }
 
 .route-overview {
-    display: table-row
+    display: table-row;
 }
 
 .route-from, .route-to {
@@ -102,13 +109,16 @@ html, body {
     top: 0.1rem;
 }
 
+/* Route component */
+
 .trip-overview-container {
-    margin-left: 2rem;
-    margin-top: 1rem;
+    float: left;
+    margin-left: var(--component-margin-sides);
+    margin-top: var(--component-margin-top);
     width: 100%;
-    max-width: 375px; 
+    max-width: 375px;
     background-color: #ffffff;
-    padding: 20px 25px; 
+    padding: 20px 25px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     border-radius: 4px;
 }
@@ -223,6 +233,7 @@ html, body {
     line-height: 1.2;
 }
 
+/* Skeleton components */
 
 .trip-overview-container.loading .stop-name,
 .trip-overview-container.loading .stop-eta {
