keep naming consistent

--- a/EmberTripsPage/Components/Trips/Route.razor
+++ b/EmberTripsPage/Components/Trips/Route.razor
@@ -3,7 +3,7 @@
 
 @if (Trip != null && Trip.Stops != null)
 {
-    <div class="trip-overview-container">
+    <div class="route-component">
         @if (!CollapseIntermediate)
         {
             <button @onclick="ToggleCollapsed" class="toggle-button toggle-button-collapsed">@ToggleButtonCaption</button>
