--- a/EmberTripsPage/Components/Trips/Skeletons/SkeletonOverview.razor
+++ b/EmberTripsPage/Components/Trips/Skeletons/SkeletonOverview.razor
@@ -1,4 +1,4 @@
-﻿<div class="overview-component loading">
+﻿<div class="panel overview-component loading">
     <div class="route-overview">
         <div class="route-start">
             <div class="route-from loading">__________</div>
