--- a/EmberTripsPage/Components/Trips/Skeletons/SkeletonRoute.razor
+++ b/EmberTripsPage/Components/Trips/Skeletons/SkeletonRoute.razor
@@ -1,4 +1,4 @@
-﻿<div class="route-component loading">
+﻿<div class="panel route-component loading">
     <ul class="trip-stops">
         <li class="stop-item start">
             <div class="marker-assembly">
