--- a/EmberTripsPage/wwwroot/app.css
+++ b/EmberTripsPage/wwwroot/app.css
@@ -1,10 +1,6 @@
 :root {
     --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --page-background-color: lightgray;
-    /* Margins */
-    --component-margin-top: 2rem;
-    --component-margin-sides: 2rem;
-
     /* Marker Sizes */
     --marker-icon-size-small: 14px;
     --marker-icon-size-large: 20px;
@@ -35,26 +31,39 @@
     --skeleton-bg: #e0e0e0;
     --skeleton-shine: #f0f0f0;
 }
-
+ 
 html, body {
     font-family: var(--font-family);
     background-color: var(--page-background-color);
 }
 
+.panel {
+    padding: 15px; 
+    box-sizing: border-box;
+    overflow: auto; 
+    border-radius: 3px;
+}
+
 .trips-component {
     width: 100%;
-    display: block;
+    display: grid;
+    grid-template-columns: minmax(450px, 1fr) 4fr;
+    grid-template-rows: auto 1fr;
+    gap: 15px; 
+    padding: 15px; 
+
+    width: 100vw;
+    max-width: 1200px; 
+    height: 100vh; 
+    max-height: 800px;
 }
 
 /* Overview component */
 .overview-component {
-    margin-left: var(--component-margin-sides);
-    margin-top: var(--component-margin-top);
-    width: 100%;
-    max-width: 500px;
     padding: 0.2rem;
-    border-radius: 0.15rem;
     background-color: white;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
 }
 
 .route-overview {
@@ -112,15 +121,11 @@ html, body {
 /* Route component */
 
 .route-component {
-    float: left;
-    margin-left: var(--component-margin-sides);
-    margin-top: var(--component-margin-top);
     width: 100%;
-    max-width: 375px;
     background-color: #ffffff;
     padding: 20px 25px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    border-radius: 4px;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
 }
 
 .trip-stops {
@@ -233,6 +238,32 @@ html, body {
     line-height: 1.2;
 }
 
+.toggle-button-collapsed {
+    float: right;
+}
+
+.toggle-button {
+    background-color: #ffffff; 
+    color: var(--color-text-secondary);
+    border: 0px;
+    padding: 0px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: text-decoration 0.2s;
+}
+
+.toggle-button:hover {
+    text-decoration: underline;
+}
+
+/* Map Component */
+
+.map-component {
+    background-color: blue;
+    grid-row: 1 / 3;
+    grid-column: 2 / 2;
+}
+
 /* Skeleton components */
 
 .route-component.loading .stop-name,
@@ -276,11 +307,11 @@ html, body {
 .overview-component.loading .route-to,
 .overview-component.loading .route-region,
 .overview-component.loading .route-name {
-    color: transparent !important; 
-    background-color: var(--skeleton-bg); 
+    color: transparent !important;
+    background-color: var(--skeleton-bg);
     border-radius: 4px;
     position: relative;
-    overflow: hidden; 
+    overflow: hidden;
     user-select: none;
     cursor: progress;
     min-height: 1.2em;
@@ -327,25 +358,4 @@ html, body {
     100% {
         background-position: -150% 0;
     }
-}
-
-.toggle-button-collapsed {
-    float: right;
-}
-
-.toggle-button {
-    background-color: #ffffff;
-    color: var(--color-text-secondary);
-    border: 0px;
-    border-radius: 3px;
-    padding: 0px;
-    font-size: 12px;
-    font-family: sans-serif;
-    cursor: pointer;
-    transition: background-color 0.2s, box-shadow 0.2s;
-    margin-bottom: 0.5rem;
-}
-
-.toggle-button:hover {
-    text-decoration: underline; 
 }
