little bit more styling

--- a/EmberTripsPage/Components/Pages/Trips.razor
+++ b/EmberTripsPage/Components/Pages/Trips.razor
@@ -15,9 +15,9 @@
 <PageTitle>Ember - Trip Viewer</PageTitle>
 
 <div class="trips-component">
+    <Header></Header>
     <Route Trip=@trip></Route>
     <Overview Trip=@trip></Overview>
-    <Details Trip="@trip"></Details>
     <Map Trip="@trip"></Map>
 </div>
 
