--- a/EmberTripsPage/wwwroot/app.css
+++ b/EmberTripsPage/wwwroot/app.css
@@ -40,29 +40,28 @@ html, body {
 .panel {
     padding: 15px; 
     box-sizing: border-box;
-    overflow: auto; 
+    overflow: auto;  
     border-radius: 3px;
 }
 
 .trips-component {
     width: 100%;
-    display: grid;
-    grid-template-columns: minmax(450px, 1fr) 4fr;
-    grid-template-rows: auto 1fr;
+    display: grid; 
+    grid-template-columns: minmax(425px, 1.5fr) 4fr;
+    grid-template-rows: 50px 90px 15fr; 
     gap: 15px; 
     padding: 15px; 
 
     width: 100vw;
-    max-width: 1200px; 
     height: 100vh; 
-    max-height: 800px;
+    max-height: 1200px;
 }
 
 /* Overview component */
 .overview-component {
     padding: 0.2rem;
     background-color: white;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
     grid-column: 1 / 2;
 }
 
@@ -124,7 +123,7 @@ html, body {
     width: 100%;
     background-color: #ffffff;
     padding: 20px 25px;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
     grid-column: 1 / 2;
 }
 
@@ -255,12 +254,12 @@ html, body {
 .toggle-button:hover {
     text-decoration: underline;
 }
-
+ 
 /* Map Component */
 
 .map-component {
     background-color: blue;
-    grid-row: 1 / 3;
+    grid-row: 2 / 4;
     grid-column: 2 / 2;
 }
 
