--- a/EmberTripsPage/Components/App.razor
+++ b/EmberTripsPage/Components/App.razor
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="EmberTripsPage.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    
+    <!-- Leaflet map + styling -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
     <HeadOutlet />
 </head>
 
