--- a/EmberTripsPage/Components/Trips/Components/Route.razor
+++ b/EmberTripsPage/Components/Trips/Components/Route.razor
@@ -49,7 +49,7 @@
                         </div>
                         <div class="stop-details">
                             <span class="stop-name">@stop.Location.Name</span>
-                            <span class="stop-eta">@stop.GetFormattedDepartureEta(Trip.GetStartTime())</span>
+                            <span class="stop-eta">@stop.GetFormattedDepartureEta(Trip.GetStartTimeUTC())</span>
                         </div>
                     </li>
                 }
