--- a/EmberTripsPage/Components/Trips/Components/Route.razor
+++ b/EmberTripsPage/Components/Trips/Components/Route.razor
@@ -1,8 +1,9 @@
 ﻿@using EmberTripsPage.Components.Trips.Skeletons
 @using EmberTripsPage.Models
 @using EmberTripsPage.Models.Json
+@using EmberTripsPage.Models.Interfaces
 
-@if (Trip != null && Trip.Stops != null)
+@if (Trip != null && Trip.GetStops() != null)
 {
     <div class="panel route-component">
         @if (!CollapseIntermediate)
@@ -14,7 +15,7 @@
             @{
                 bool collapsedIntermediate = false;
 
-                foreach (var stop in Trip.Stops)
+                foreach (var stop in Trip.GetStops())
                 {
                     var stopType = Trip.GetStopType(stop);
                     if (stopType != StopType.INTERMEDIATE)
@@ -48,7 +49,7 @@
                             <div class="marker-stem"></div>
                         </div>
                         <div class="stop-details">
-                            <span class="stop-name">@stop.Location.Name</span>
+                            <span class="stop-name">@stop.GetName()</span>
                             <span class="stop-eta">@stop.GetFormattedDepartureEta(Trip.GetStartTimeUTC())</span>
                         </div>
                     </li>
@@ -64,7 +65,7 @@ else
 
 @code {
     [Parameter]
-    public TripResult? Trip { get; set; }
+    public ITrip? Trip { get; set; }
 
     public bool CollapseIntermediate = true;
 
